@@ -163,10 +163,13 @@ function forum_remove_bad_characters()
 
 	($hook = get_hook('fn_remove_bad_characters_start')) ? eval($hook) : null;
 
-	function _forum_remove_bad_characters($array)
+	if (!function_exists('_forum_remove_bad_characters'))
 	{
-		global $bad_utf8_chars;
-		return is_array($array) ? array_map('_forum_remove_bad_characters', $array) : str_replace($bad_utf8_chars, '', $array);
+	    function _forum_remove_bad_characters($array)
+	    {
+	        global $bad_utf8_chars;
+		    return is_array($array) ? array_map('_forum_remove_bad_characters', $array) : str_replace($bad_utf8_chars, '', $array);
+	    }
 	}
 
 	$_GET = _forum_remove_bad_characters($_GET);
@@ -3205,7 +3208,7 @@ function maintenance_message()
 // Display $message and redirect user to $destination_url
 function redirect($destination_url, $message)
 {
-	global $forum_db, $forum_config, $lang_common, $forum_user, $base_url, $forum_loader;
+	global $forum_db, $forum_config, $lang_common, $forum_user, $base_url, $forum_loader, $forum_flash;
 
 	define('FORUM_PAGE', 'redirect');
 
@@ -3232,8 +3235,12 @@ function redirect($destination_url, $message)
 	}	
 	
 	// If the delay is 0 seconds, we might as well skip the redirect all together
-	if ($forum_config['o_redirect_delay'] == '0')
+	if ($forum_config['o_redirect_delay'] == '0') {
+        if (!$forum_flash->get_message()) {
+            $forum_flash->add_info($message);
+        }
 		header('Location: '.str_replace('&amp;', '&', $destination_url));
+    }
 
 	// Send no-cache headers
 	header('Expires: Thu, 21 Jul 1977 07:30:00 GMT');	// When yours truly first set eyes on this world! :)
